# mcp-mapping-transposer

./: .format-cieck  .gitignore  .travis.yml  Cargo.toml  README.md  mcp-mapping-transposer.sublime-project  rustfmt.toml
src/: main.rs  mapping.rs  network.rs  options.rs  trans.rs  workspace.rs
src/mapping/: mod.rs  spec.rs
